<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Mike Brickman 2014-2017
  -->

<RelativeLayout
    android:id="@+id/loFragment"
    xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorPrimaryInverse"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
        android:id="@+id/loDistanceTime"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/loNavigation"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/loButtonGrid"
            android:id="@+id/loTop"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Score"
                android:id="@+id/tvHint"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                style="@style/Text30"
                />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/loButtonGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:useDefaultMargins="true"
            >

            <org.egility.android.views.QuickButton
                android:id="@+id/btRefusal"
                style="@style/CalculatorButtonHugeScore"
                android:layout_column="2"
                android:layout_marginRight="0dp"
                android:layout_row="0"
                android:text="@string/score_refusal"
                />

            <org.egility.android.views.QuickButton
                android:id="@+id/btHandling"
                style="@style/CalculatorButtonLargeScore"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_row="0"
                android:text="@string/score_handling"
                />

            <org.egility.android.views.QuickButton
                android:id="@+id/btElimination"
                style="@style/CalculatorButtonLargeScore"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/score_elimination"
                />

            <org.egility.android.views.QuickButton
                android:id="@+id/btFault"
                style="@style/CalculatorButtonHugeScore"
                android:layout_column="2"
                android:layout_marginRight="0dp"
                android:layout_row="1"
                android:text="@string/score_fault"
                />

            <org.egility.android.views.QuickButton
                android:id="@+id/btScoreDelete"
                style="@style/CalculatorButtonStandardScore"
                android:layout_column="0"
                android:layout_marginLeft="0dp"
                android:layout_row="1"
                android:text="@string/score_delete"
                />

            <org.egility.android.views.QuickButton
                android:id="@+id/btClear"
                style="@style/CalculatorButtonLargeScore"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/score_clear"
                />
        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loBottom"
            android:layout_below="@+id/loButtonGrid"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear Round Only"
                android:id="@+id/xbClearRound"
                style="@style/CheckBox30"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loNavigation"
        style="@style/PanelNavigation"
        >

        <org.egility.android.views.QuickButton
            android:id="@+id/btCancel"
            style="@style/ButtonNavigation"
            android:text="Cancel"
            />

        <org.egility.android.views.QuickButton
            android:id="@+id/btBack"
            style="@style/ButtonNavigation"
            android:drawableLeft="@drawable/back"
            />

        <org.egility.android.views.QuickButton
            android:id="@+id/btNFC"
            style="@style/ButtonNavigation"
            android:text="@string/score_nfc"
            />

        <org.egility.android.views.QuickButton
            android:id="@+id/btEnterTime"
            style="@style/ButtonNavigation"
            android:text="@string/score_time"
            />

        <org.egility.android.views.QuickButton
            android:id="@+id/btOK"
            style="@style/ButtonNavigation"
            android:text="OK"
            />
    </LinearLayout>
</RelativeLayout>